
INCLUDES = -I./ -I../ -I../port

noinst_LTLIBRARIES=libsf.la

libsf_la_SOURCES= ogr_attrind.h ogrsf_frmts.h \
				generic/ogr_attrind.cpp \
				generic/ogrdatasource.cpp \
				generic/ogr_gensql.cpp \
				generic/ogr_gensql.h \
				generic/ogrlayer.cpp \
				generic/ogr_miattrind.cpp \
				generic/ogrregisterall.cpp \
				generic/ogrsfdriver.cpp \
				generic/ogrsfdriverregistrar.cpp \
				\
				\
				mitab/mitab_bounds.cpp \
				mitab/mitab_coordsys.cpp \
				mitab/mitab_datfile.cpp \
				mitab/mitab_feature.cpp \
				mitab/mitab_feature_mif.cpp \
				mitab/mitab_geometry.cpp \
				mitab/mitab_geometry.h \
				mitab/mitab.h \
				mitab/mitab_idfile.cpp \
				mitab/mitab_imapinfofile.cpp \
				mitab/mitab_indfile.cpp \
				mitab/mitab_mapcoordblock.cpp \
				mitab/mitab_mapfile.cpp \
				mitab/mitab_mapheaderblock.cpp \
				mitab/mitab_mapindexblock.cpp \
				mitab/mitab_mapobjectblock.cpp \
				mitab/mitab_maptoolblock.cpp \
				mitab/mitab_middatafile.cpp \
				mitab/mitab_miffile.cpp \
				mitab/mitab_ogr_datasource.cpp \
				mitab/mitab_ogr_driver.cpp \
				mitab/mitab_ogr_driver.h \
				mitab/mitab_priv.h \
				mitab/mitab_rawbinblock.cpp \
				mitab/mitab_spatialref.cpp \
				mitab/mitab_tabfile.cpp \
				mitab/mitab_tabseamless.cpp \
				mitab/mitab_tabview.cpp \
				mitab/mitab_tooldef.cpp \
				mitab/mitab_utils.cpp \
				mitab/mitab_utils.h \
				\
				\
				shape/dbfopen.cpp \
				shape/ogrshapedatasource.cpp \
				shape/ogrshapedriver.cpp \
				shape/ogrshape.h \
				shape/ogrshapelayer.cpp \
				shape/shape2ogr.cpp \
				shape/shapefil.h \
				shape/shpopen.cpp \
				shape/shptree.cpp

